; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_append_space.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_cf-lexer.c_append_space.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cf_preprocessor = type { i32 }
%struct.darray = type { i32 }
%struct.cf_token = type { i32, i32, i32, i32 }

@space_filler = common dso_local global i32 0, align 4
@CFTOKEN_SPACETAB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cf_preprocessor*, %struct.darray*, %struct.cf_token*)* @append_space to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @append_space(%struct.cf_preprocessor* %0, %struct.darray* %1, %struct.cf_token* %2) #0 {
  %4 = alloca %struct.cf_preprocessor*, align 8
  %5 = alloca %struct.darray*, align 8
  %6 = alloca %struct.cf_token*, align 8
  %7 = alloca %struct.cf_token, align 4
  store %struct.cf_preprocessor* %0, %struct.cf_preprocessor** %4, align 8
  store %struct.darray* %1, %struct.darray** %5, align 8
  store %struct.cf_token* %2, %struct.cf_token** %6, align 8
  %8 = getelementptr inbounds %struct.cf_token, %struct.cf_token* %7, i32 0, i32 0
  %9 = load i32, i32* @space_filler, align 4
  %10 = call i32 @strref_set(i32* %8, i32 %9, i32 1)
  %11 = load i32, i32* @CFTOKEN_SPACETAB, align 4
  %12 = getelementptr inbounds %struct.cf_token, %struct.cf_token* %7, i32 0, i32 3
  store i32 %11, i32* %12, align 4
  %13 = load %struct.cf_token*, %struct.cf_token** %6, align 8
  %14 = icmp ne %struct.cf_token* %13, null
  br i1 %14, label %15, label %24

15:                                               ; preds = %3
  %16 = load %struct.cf_token*, %struct.cf_token** %6, align 8
  %17 = getelementptr inbounds %struct.cf_token, %struct.cf_token* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.cf_token, %struct.cf_token* %7, i32 0, i32 2
  store i32 %18, i32* %19, align 4
  %20 = getelementptr inbounds %struct.cf_token, %struct.cf_token* %7, i32 0, i32 1
  %21 = load %struct.cf_token*, %struct.cf_token** %6, align 8
  %22 = getelementptr inbounds %struct.cf_token, %struct.cf_token* %21, i32 0, i32 1
  %23 = call i32 @strref_copy(i32* %20, i32* %22)
  br label %32

24:                                               ; preds = %3
  %25 = load %struct.cf_preprocessor*, %struct.cf_preprocessor** %4, align 8
  %26 = getelementptr inbounds %struct.cf_preprocessor, %struct.cf_preprocessor* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = getelementptr inbounds %struct.cf_token, %struct.cf_token* %7, i32 0, i32 2
  store i32 %27, i32* %28, align 4
  %29 = getelementptr inbounds %struct.cf_token, %struct.cf_token* %7, i32 0, i32 1
  %30 = getelementptr inbounds %struct.cf_token, %struct.cf_token* %7, i32 0, i32 0
  %31 = call i32 @strref_copy(i32* %29, i32* %30)
  br label %32

32:                                               ; preds = %24, %15
  %33 = load %struct.darray*, %struct.darray** %5, align 8
  %34 = call i32 @darray_push_back(i32 16, %struct.darray* %33, %struct.cf_token* %7)
  ret void
}

declare dso_local i32 @strref_set(i32*, i32, i32) #1

declare dso_local i32 @strref_copy(i32*, i32*) #1

declare dso_local i32 @darray_push_back(i32, %struct.darray*, %struct.cf_token*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
